<resources>
    <string name="app_name">Tapas Site Demo</string>
    <string name="title_activity_stationary">StationaryActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login1">Sign in</string>
    <string name="latitudeBabel">Latitude</string>
    <string name="longitudeBabel">Longitude</string>
    <string name="prompt_email">USERNAME</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="login_header1">Tapas</string>
    <string name="login_header2">site</string>
    <string name="maps">Maps</string>
    <string name="ssv">SSV</string>
    <string name="technologylock">Technology Lock</string>
    <string name="capture">Capture</string>
    <string name="survey">Survey</string>
    <string name="filemanager">File Manager</string>
    <string name="crash_toast_text">App crashed, but a report has been sent!</string>
    <string name="support">Contact Tapas Support</string>
    <string name="Stationaryresult">STATIONARY TEST RESULTS</string>
    <string name="StationarySummaryResult">Summary Results</string>
    <string name="mobility">Mobility</string>
    <string name="testtype">Functional Test</string>
    <string name="mobilityresults">Mobility results</string>
    <string name="selectsite">Select Site Id</string>
    <string name="network_lock">Network Locking</string>
    <string name="network_lock2">Locking</string>
    <string name="question1">Check if the site is accesible</string>
    <string name="question2">Check if the all sectors in the \n site have passed </string>
    <string name="question3">Check if the site had any alarms</string>
    <string name="question4">Select if site is tower top</string>
    <string name="question5">Select if site is tower bottom</string>
    <string name="question6">Select one of the following</string>
    <string name="intro_action_retry">Retry</string>
    <string name="status_action_refresh">Refresh</string>
    <string name="status_action_force">Force</string>
    <string name="status_action_reset">Reset</string>
    <string name="status_action_help">Help</string>
    <string name="force_action_apply">Apply</string>
    <string name="peak_ul">Peak UL iPERF</string>
    <string name="peak_dl">Peak DL iPERF</string>
    <string name="avg_ul">Avg UL iPERF</string>
    <string name="avg_dl">Avg DL iPERF</string>
    <string name="avg_ping_time">Avg Ping iPERF</string>
    <string name="Email">Email</string>
    <string name="Browsing">Browsing</string>
    <string name="Video">Video </string>
    <string name="CallMOI">EARFCN </string>
    <string name="CallMTI">CELLID</string>
    <string name="hint_yes">Yes</string>
    <string name="hint_no">No</string>
    <string name="hint_ok">OK</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_site_not_found">Site Not Found!!</string>
    <string name="hint_do_you_want">Do you want to add site to the database?</string>
    <string name="hint_submit_site">Submit Site</string>
    <string name="hint_site_name">Site Name</string>
    <string name="hint_sector_name_pci">Sector Name PCI (separate by commas)</string>
    <string name="hint_channel">Channel</string>
    <string name="hint_azimuth">Azimuth (separate by commas)</string>
    <string name="hint_add_site_location">Site Location</string>
    <string name="hint_site_added">Site added!</string>
    <string name="error_site_name">Please enter Site Name</string>
    <string name="error_sector_name_pci">Please enter Sector Name PCI</string>
    <string name="error_channel">Please enter Channel</string>
    <string name="error_azimuth">Please enter Azimuth</string>
    <string name="error_select_lat_lng">Please select Latitude and Longitude</string>
    <string name="hint_stationary">Stationary</string>
    <string name="title_activity_test_type">TestTypeActivity</string>
    <string name="select_type">Select the type of test</string>
    <string name="indoor_stat">Indoor Stationary</string>
    <string name="indoor_mob">Indoor Mobility</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor_stat">Outdoor Stationary</string>
    <string name="outdoor_mob">Outdoor Mobility</string>
    <string name="outdoor">Outdoor</string>
    <string name="hint_site_location">1. Site Location</string>
    <string name="hint_location_indoor">Indoor</string>
    <string name="hint_location_outdoor">Outdoor</string>
    <string name="hint_select_one_of_the_following">3. Select one of the following</string>
    <string name="hint_rrh_location">2. RRH Location</string>
    <string name="hint_backhaul">3. Backhaul</string>
    <string name="hint_select">Select</string>
    <string name="hint_tower_top">Tower Top</string>
    <string name="hint_tower_bottom">Tower Bottom</string>
    <string name="hint_select_one_of_the_following_backhauk">4. Select one of the following</string>
    <string name="hint_fiber">Fiber</string>
    <string name="hint_t1">T1</string>
    <string name="hint_site_is_accessible">4. Is site accessible</string>
    <string name="hint_any_alarms">5. Does the site have alarms?</string>
    <string name="hint_sectors_online">6. Are all sectors online?</string>
    <string name="hint_technologies_on_site">7. Technologies on Site</string>
    <string name="hint_lte_1c">LTE 1C</string>
    <string name="hint_lte_2c">LTE 2C</string>
    <string name="hint_umts_1c">UMTS 1C</string>
    <string name="hint_umts_2c">UMTS 2C</string>
    <string name="hint_gsm">GSM</string>
    <string name="hint_delete_question">Delete the question?</string>
    <string name="hint_edit_question">Edit the Question</string>
    <string name="hint_update">Update</string>
    <string name="error_question">Please enter question</string>
    <string name="hint_project_id">Project ID</string>
    <string name="hint_site_id">Site ID</string>
    <string name="hint_search_site">SERACH SITE</string>
    <string name="hint_login">Login</string>
    <string name="hint_submit">Submit</string>
    <string name="hint_capture">Capture</string>
    <string name="empty_spaces">\t\t\t\t\t\t\t  </string>
    <string name="hint_file_uploads">File Uploads</string>
    <string name="hint_upload_selected_file">Upload Selected File</string>
    <string name="hint_upload_files">Upload Files</string>
    <string name="hint_upload_results">Upload Results</string>
    <string name="hint_mobility">Mobility</string>
    <string name="hint_from_date">From Date</string>
    <string name="hint_to_date">To Date</string>
    <string name="hint_clear_logs">Clear Logs</string>
    <string name="hint_clear_photos">Clear Photos</string>
    <string name="hint_clear_all_memory">Clear All Memory</string>
    <string name="hint_storage_clean_up">Storage Clean Up</string>
    <string name="hint_warning">Warning</string>
    <string name="hint_there_are_Some">There are some files not uploaded on server. Do you want to upload these files on server.</string>
    <string name="hint_individual_tests">Individual Tests</string>
    <string name="hint_carrier_aggregation">Carrier Aggregation</string>
    <string name="hint_ca_test_results">CA Test Results</string>
    <string name="hint_carrier_aggregation_test">Carrier Aggregation Test</string>
    <string name="hint_volte_mo_test">VoLTE MO Test</string>
    <string name="hint_volte_mo_results">VoLTE MO Test Results</string>
    <string name="hint_volte_test">VoLTE Test</string>
    <string name="hint_site_id_">SITE ID</string>
    <string name="hint_sector_id">SECTOR ID</string>
    <string name="hint_channel_cap">CHANNEL</string>
    <string name="hint_temp">TEMP.</string>
    <string name="hint_agl">AGL</string>
    <string name="hint_pci">PCI</string>
    <string name="hint_rsrp">RSRP</string>
    <string name="hint_rsrq">RSRQ</string>
    <string name="hint_sinr">SINR</string>
    <string name="hint_cid">CID</string>
    <string name="hint_ca_enabled">CA ENABLED</string>
    <string name="hint_ue_category">UE CATEGORY</string>
    <string name="hint_band_supported">BAND SUPPORTED</string>
    <string name="hint_mcs_tb0">MCS TB0</string>
    <string name="hint_mcs_tb1">MCS TB1</string>
    <string name="hint_rx_antenna">RX ANTENNA</string>
    <string name="hint_tx_antenna">TX ANTENNA</string>
    <string name="hint_primary_pci">PRIMARY PCI</string>
    <string name="hint_primary_earfcn">PRIMARY EARFCN</string>
    <string name="hint_secondary_pci">SECONDARY PCI</string>
    <string name="hint_secondary_earfcn">SECONDARY EARFCN</string>
    <string name="hint_aggregated_throughput">AGGREGATED DL THROUGHPUT</string>
    <string name="pdsch_throughput">PEAK PDSCH THROUGHPUT</string>
    <string name="hint_take_screenshot">Take Screenshot</string>
    <string name="hint_rssi">RSSI</string>
    <string name="hint_cinr">CINR</string>
    <string name="hint_volte_enabled">VoLTE Enabled</string>
    <string name="hint_mos_score_pcap_results">MOS Score shown on Dashboard</string>
    <string name="hint_modulation_technique">Modulation Technique</string>
    <string name="hint_number_antennas">Number of Rx/Tx Antennas</string>
    <string name="hint_cell_information">Cell Information</string>
    <string name="hint_enter_valid_username">Enter Valid Username</string>
    <string name="hint_you_must_be_connected">You must be connected to Data Connectivity in order to use this application</string>
    <string name="hint_is_available_for_update"> is available for Update. Please wait while we are updating. After update please re-launch the Tapas application</string>
    <string name="hint_csv_file_download_issue">CSV File download issue</string>
    <string name="hint_files_are_missing">Files are missing. Please contact TAPAS Support</string>
    <string name="hint_uplink_file_is_missing">Uplink File is missing. Please contact TAPAS Support</string>
    <string name="hint_some_column_or_values_are_missing">Some column or values are missing in testseq. Please reverify before testing!</string>
    <string name="hint_insufficient_disk_space">Insufficient disk space.Exiting</string>
    <string name="hint_lte_mode_or_wcdma_mode">LTE MODE or WCDMA MODE or GSM MODE debug is enabled. Both should be disabled in Release build. Are you sure you want this build?</string>
    <string name="hint_ul_test_completed">UL Test Completed</string>
    <string name="hint_no_site_available_for_matching">No site Available for matching EARFCN Call Tapas Support</string>
    <string name="hint_device_is_running_in_low_memory">Device is running in low memory Please Manually cleanup your Storage or call TAPAS support</string>
    <string name="hint_cross_feeder_has_been">Cross feeder has been started</string>
    <string name="hint_cross_feeder_test_completed">Cross feeder test has been completed</string>
</resources>